# hairball

./: .travis.yml  Cargo.toml  README.md  build.rs
hairballs/ref/: 0-10.hairball  0..10.hairball  0..10_000.hairball  external.hairball  parent.hairball  parent_list.hairball
schema/: hairball.capnp
src/: container.rs  lib.rs
src/dae_to_hairball/: Cargo.toml  bin.rs
src/draw_binding/: Cargo.toml  build.rs  draw_binding.capnp  draw_binding_capnp.rs  lib.rs
src/geometry/: Cargo.toml  build.rs  geometry.capnp  geometry_capnp.rs  lib.rs
src/hairball/: Cargo.toml  build.rs  container.rs  hairball.capnp  hairball_capnp.rs  lib.rs
src/material/: Cargo.toml  build.rs  lib.rs  material.capnp  material_capnp.rs
src/mesh/: Cargo.toml  build.rs  lib.rs  mesh.capnp  mesh_capnp.rs
src/mesh_index/: Cargo.toml  build.rs  index.capnp  index_capnp.rs  lib.rs
src/obj_to_hairball/: Cargo.toml  bin.rs
tests/: test.rs
